--- a/DevDocs.Backend.WebAPI/appsettings.Development.json
+++ b/DevDocs.Backend.WebAPI/appsettings.Development.json
@@ -16,7 +16,7 @@
   },
   "Keycloak": {
     "BaseUrl": "https://identity.teamfullstack.io",
-    "AdminUrl": "https://identity.teamfullstack.io/admin/realms/usman",
+    "AdminUrl": "https://identity.teamfullstack.io/admin/realms/usman/user",
     "TokenUrl": "https://identity.teamfullstack.io/realms/usman/protocol/openid-connect/token",
     "AdminClientId": "admin",
     "AdminClientSecret": "Tf6KRb94BKZQlQ4ZOC2P9uBwoXtudIql",
